objects/PC_Candidate_to_Patient_Mapping__mdt.object
<CustomObject>
    <fields>
        <fullName>PC_SourceField__c</fullName>
        <label>SourceField</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PC_SourceObject__c</fullName>
        <label>SourceObject</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PC_TargetField__c</fullName>
        <label>TargetField</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PC_TargetObject_RecordType__c</fullName>
        <label>TargetObject RecordType</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PC_TargetObject__c</fullName>
        <label>TargetObject</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PC_Target_Object_Index__c</fullName>
        <defaultValue>1</defaultValue>
        <label>Target Object Index</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PC_Used_For_Account_Record_Type__c</fullName>
        <label>Used For Account Record Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Candidate to Patient Mapping</label>
    <pluralLabel>Candidate to Patient Mappings</pluralLabel>
</CustomObject>